--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description"
-  content="Esta es una pagina demo de una landing page realizada por Dora Callisaya">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="src/css/styles.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Landing page</title>
+  <title>Document</title>
 </head>
 
-<body>
-  <header class="header" id="header">
+<body id="body">
+  <header class="header">
     <figure class="header__logo">
       <img src="src/images/logo.svg" alt="logo app">
     </figure>
@@ -93,8 +91,7 @@
     <section class="comments">
       <h2 class="comments__title">What they've said</h2>
       <div class="comments__wrapper">
-        <div class="comment" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="comment" data-aos="fade-up" data-aos-duration="1000">
           <figure class="comment__figure">
             <img src="src/images/avatar-ali.png" alt="">
           </figure>
@@ -104,7 +101,7 @@
             visibility on larger milestones at all times keeps everyone motivated.”
           </p>
         </div>
-        <div class="comment">
+        <div class="comment" data-aos="fade-up" data-aos-duration="2000">
           <figure class="comment__figure">
             <img src="src/images/avatar-ali.png" alt="">
           </figure>
@@ -114,7 +111,7 @@
             visibility on larger milestones at all times keeps everyone motivated.”
           </p>
         </div>
-        <div class="comment">
+        <div class="comment" data-aos="fade-up" data-aos-duration="3000">
           <figure class="comment__figure">
             <img src="src/images/avatar-ali.png" alt="">
           </figure>
@@ -174,6 +171,7 @@
   </footer>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
   <script src="src/js/index.js"></script>
 </body>
 
